test(theme-repository): theme id가 null을 가지는 문제 수정